alb.tf
resource "aws_lb" "app-lb" {
  name = "ALB"
  internal = true
  load_balancer_type = "application"
  security_groups = [ aws_security_group.alb-sg.id ]
  subnets = [ aws_subnet.public.id, aws_subnet.public2.id ]

  tags = {
    Name = "ALB"
  }
}

resource "aws_lb_target_group" "app-lb-tg" {
  name = "ALB-TG"
  port = var.webserver-port
  target_type = "instance"
  vpc_id = aws_vpc.main.id
  protocol = "HTTP"
  health_check {
    enabled = true
    interval = 10
    path = "/"
    port = var.webserver-port
    protocol = "HTTP"
    matcher = "200-299"
  }

  tags = {
    Name = "ALB-TG"
  }
}

resource "aws_lb_target_group_attachment" "alb-tg-members" {
  target_group_arn = aws_lb_target_group.app-lb-tg.arn
  target_id = aws_instance.nginx.id
  port = var.webserver-port
}

resource "aws_lb_listener" "alb-listener-http" {
  load_balancer_arn = aws_lb.app-lb.arn
  port = 80
  protocol = "HTTP"
  default_action {
    type= "forward"
    target_group_arn = aws_lb_target_group.app-lb-tg.id
  }  
}



output "ALBId"{
  value = aws_lb.app-lb.dns_name
}
